Fixed wrong font size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .photo-section h2 {
-    font-size: clamp(2.2rem, 4vw, 3.5rem);
+    font-size: clamp(3rem, 4vw, 3.5rem);
     font-weight: 700;
     line-height: 1;
 
